[package]
name = "velocity_odometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.3", features = ["rand"] }
nannou = "0.18.1"
rand = "0.8.5"
robotics = { path = "../RustRobotics" }
rustc-hash = "1.1.0"
